<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background_theme_color">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/profile_imgLay"

                >
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="180dp">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/defalut_wall"
                        android:scaleType="centerCrop"
                        android:id="@+id/profilePage_wallPic"/>
                </RelativeLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Your Name"
                    android:textColor="@color/textColor"
                    android:textSize="28sp"
                    android:layout_marginTop="60dp"
                    android:gravity="center"
                    android:id="@+id/profilePage_Username"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="UserName"
                    android:textColor="@color/textColor"
                    android:textSize="18sp"
                    android:gravity="center"
                    android:layout_below="@id/profilePage_Username"
                    android:layout_marginTop="5dp"
                    />


            </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:id="@+id/BottomButton"
        android:background="@color/seperator_color"
        android:weightSum="100">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="EARN CREDIT"
            android:textColor="@color/textColor"
            android:layout_marginRight="1dp"
            android:background="@color/TheamColor"
            android:layout_weight="50"
            android:id="@+id/profilepage_earnCredit"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="NEXT"
            android:textColor="@color/textColor"
            android:layout_marginLeft="1dp"
            android:background="@color/TheamColor"
            android:layout_weight="50"
            android:id="@+id/profilePage_next"/>
    </LinearLayout>



            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/textColor"
                android:layout_below="@+id/profile_imgLay"
                android:layout_above="@+id/BottomButton"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:orientation="vertical"
                    android:gravity="center"
                    >
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="1">
                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/spinner_height"
                            android:layout_weight="0.5"
                            android:paddingLeft="2dp"
                            android:paddingRight="2dp"
                            >
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="horizontal"
                                android:id="@+id/temp">
                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:textSize="15sp"
                                    android:textColor="@android:color/black"
                                    android:text="@string/select_your_date_of_birth"
                                    android:id="@+id/profilePage_dateOfBirth"
                                    android:paddingLeft="10dp"
                                    android:onClick="DatePickerCall"/>
                            </LinearLayout>

                            <include layout="@layout/under_line"
                                android:layout_height="wrap_content"
                                android:layout_width="match_parent"
                                android:layout_alignParentBottom="true"
                                />
                        </RelativeLayout>

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/spinner_height"
                            android:layout_weight="0.5"
                            android:paddingLeft="2dp"
                            android:paddingRight="2dp"
                            >
                        <Spinner
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:prompt="@string/select_your_gender"
                            android:entries="@array/Gender_list"
                            android:id="@+id/profilePage_gender"
                            android:layout_centerVertical="true"
                           />
                            <include layout="@layout/under_line"
                                android:layout_height="wrap_content"
                                android:layout_width="match_parent"
                                android:layout_alignParentBottom="true"
                                />
                        </RelativeLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="1">
                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/spinner_height"
                            android:layout_weight="0.5"
                            android:paddingLeft="2dp"
                            android:paddingRight="2dp"
                            >
                        <Spinner
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:entries="@array/education_list"
                            android:id="@+id/profilePage_education"
                            android:layout_centerVertical="true"
                            />
                            <include layout="@layout/under_line"
                                android:layout_height="wrap_content"
                                android:layout_width="match_parent"
                                android:layout_alignParentBottom="true"
                                />
                        </RelativeLayout>

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/spinner_height"
                            android:layout_weight="0.5"
                            >
                        <Spinner
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:entries="@array/status_list"
                            android:prompt="@string/select_your_status"
                            android:id="@+id/profilePage_status"
                            android:layout_centerVertical="true"

                            />
                            <include layout="@layout/under_line"
                                android:layout_height="wrap_content"
                                android:layout_width="match_parent"
                                android:layout_alignParentBottom="true"
                                />
                        </RelativeLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="1">
                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/spinner_height"
                            android:layout_weight="0.5"
                            android:paddingLeft="2dp"
                            android:paddingRight="2dp"
                            >
                        <Spinner
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:prompt="@string/select_your_Hometown"
                            android:entries="@array/hometown_list"
                            android:id="@+id/profilePage_hometown"
                            android:layout_centerVertical="true"
                            />
                            <include layout="@layout/under_line"
                                android:layout_height="wrap_content"
                                android:layout_width="match_parent"
                                android:layout_alignParentBottom="true"
                                />
                        </RelativeLayout>
                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/spinner_height"
                            android:layout_weight="0.5"
                            >
                        <Spinner
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:prompt="@string/select_your_livingIn"
                            android:entries="@array/livingIn_list"
                            android:id="@+id/profilePage_livingIn"
                            android:layout_centerVertical="true"
                            />
                            <include layout="@layout/under_line"
                                android:layout_height="wrap_content"
                                android:layout_width="match_parent"
                                android:layout_alignParentBottom="true"
                                />
                        </RelativeLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="1"
                        android:baselineAligned="false">
                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/spinner_height"
                            android:layout_weight="0.5"
                            android:paddingLeft="2dp"
                            android:paddingRight="2dp"
                            >
                        <Spinner
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:prompt="@string/select_your_state"
                            android:entries="@array/state_list"
                            android:id="@+id/profilePage_state"
                            android:layout_centerVertical="true"
                            />
                            <include layout="@layout/under_line"
                                android:layout_height="wrap_content"
                                android:layout_width="match_parent"
                                android:layout_alignParentBottom="true"
                                />
                        </RelativeLayout>
                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/spinner_height"
                            android:layout_weight="0.5"
                            >
                        <Spinner
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:prompt="@string/select_your_region"
                            android:entries="@array/region_list"
                            android:id="@+id/profilePage_region"
                            android:layout_centerVertical="true"
                            />
                            <include layout="@layout/under_line"
                                android:layout_height="wrap_content"
                                android:layout_width="match_parent"
                                android:layout_alignParentBottom="true"
                                />
                        </RelativeLayout>
                    </LinearLayout>
                </LinearLayout>

            </RelativeLayout>



    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profilePage_profilePic"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/default_user"
        app:border_color="#FF000000"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/profile_pic_space_vertical"
        />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/edit_icon"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="30dp"
            android:background="@null"
            android:id="@+id/profilePage_editImage"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:onClick="AddImageInBackGround"
            />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/triangle"
        android:id="@+id/triangleShap"
        android:layout_above="@+id/BottomButton"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="-1dp"
        android:scaleType="fitStart"
        />

    <include layout="@layout/custome_actionbar3"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        />

</RelativeLayout>
